--- a/chatrooms/templates/profile/profile.html
+++ b/chatrooms/templates/profile/profile.html
@@ -74,6 +74,8 @@
             <div> <h3>Email: {{user.email}}</h3> </div>
             <div> <h3>FirstName: {{user.first_name}}</h3> </div>
             <div> <h3>LastName : {{user.last_name}}</h3> </div>
+            <p><a href="{% url 'change_password'%}">Change Password</a></p>
+            <p><a href="{% url 'edit_profile'%}">Change Information</a></p>
     </div>
 </div>
 <!-- <a href="{% build_chat_url user.username user_dict.username %}" class="list-group-item list-group-item-action">{{ user_dict.username }}</a> -->
