--- a/user/templates/user/edit_profile.html
+++ b/user/templates/user/edit_profile.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello</h1>
+    <form method="POST" >
+    {% csrf_token %}
+    {{ user_form.as_p }}
+    <input type="submit" name="submit" value="update">
+
+</form>
 </body>
 </html>
